@@ -32,71 +32,143 @@ class StoreSpec extends EmbeddedSpecification {
       def "a feature"() {
         expect: true
       }
+
+      def "data driven feature"() {
+        expect: true
+        where:
+        i << [1, 2]
+      }
     }
 ''')
 
     then:
     LoggingStoreInterceptor.HACKY_SHARED_LIST_OF_ACTIONS == [
-      "before SHARED_INITIALIZER - null",
-      "	prev:     null",
-      "	replaced: null",
-      "	put:      Stored at SHARED_INITIALIZER - null",
-      "after SHARED_INITIALIZER - null",
-      "before SPEC_EXECUTION - null",
-      "	prev:     Stored at SHARED_INITIALIZER - null",
-      "	replaced: Stored at SHARED_INITIALIZER - null",
-      "	put:      Stored at SPEC_EXECUTION - null",
-      "before SETUP_SPEC - null",
-      "	prev:     Stored at SPEC_EXECUTION - null",
-      "	replaced: Stored at SPEC_EXECUTION - null",
-      "	put:      Stored at SETUP_SPEC - null",
-      "after SETUP_SPEC - null",
-      "before INITIALIZER - null",
-      "	prev:     Stored at SETUP_SPEC - null",
-      "	replaced: null",
-      "	put:      Stored at INITIALIZER - null",
-      "after INITIALIZER - null",
-      "before FEATURE_EXECUTION - null",
-      "	prev:     Stored at INITIALIZER - null",
-      "	replaced: Stored at INITIALIZER - null",
-      "	put:      Stored at FEATURE_EXECUTION - null",
-      "before ITERATION_EXECUTION - null",
-      "	prev:     Stored at FEATURE_EXECUTION - null",
-      "	replaced: Stored at FEATURE_EXECUTION - null",
-      "	put:      Stored at ITERATION_EXECUTION - null",
-      "before SETUP - null",
-      "	prev:     Stored at ITERATION_EXECUTION - null",
-      "	replaced: Stored at ITERATION_EXECUTION - null",
-      "	put:      Stored at SETUP - null",
-      "after SETUP - null",
-      "before FEATURE - a feature",
-      "	prev:     Stored at SETUP - null",
-      "	replaced: Stored at SETUP - null",
-      "	put:      Stored at FEATURE - a feature",
-      "after FEATURE - a feature",
-      "before CLEANUP - null",
-      "	prev:     Stored at FEATURE - a feature",
-      "	replaced: Stored at FEATURE - a feature",
-      "	put:      Stored at CLEANUP - null",
-      "after CLEANUP - null",
-      "# closing Stored at CLEANUP - null",
-      "# closing Stored at FEATURE - a feature",
-      "# closing Stored at SETUP - null",
-      "# closing Stored at ITERATION_EXECUTION - null",
-      "# closing Stored at FEATURE_EXECUTION - null",
-      "# closing Stored at INITIALIZER - null",
-      "after ITERATION_EXECUTION - null",
-      "after FEATURE_EXECUTION - null",
-      "before CLEANUP_SPEC - null",
-      "	prev:     Stored at SETUP_SPEC - null",
-      "	replaced: Stored at SETUP_SPEC - null",
-      "	put:      Stored at CLEANUP_SPEC - null",
-      "after CLEANUP_SPEC - null",
-      "# closing Stored at CLEANUP_SPEC - null",
-      "# closing Stored at SETUP_SPEC - null",
-      "# closing Stored at SPEC_EXECUTION - null",
-      "# closing Stored at SHARED_INITIALIZER - null",
-      "after SPEC_EXECUTION - null"
+      'before SHARED_INITIALIZER - null',
+      '	prev:     null',
+      '	replaced: null',
+      '	put:      Stored at SHARED_INITIALIZER - null',
+      'after SHARED_INITIALIZER - null',
+      'before SPEC_EXECUTION - null',
+      '	prev:     Stored at SHARED_INITIALIZER - null',
+      '	replaced: Stored at SHARED_INITIALIZER - null',
+      '	put:      Stored at SPEC_EXECUTION - null',
+      'before SETUP_SPEC - null',
+      '	prev:     Stored at SPEC_EXECUTION - null',
+      '	replaced: Stored at SPEC_EXECUTION - null',
+      '	put:      Stored at SETUP_SPEC - null',
+      'after SETUP_SPEC - null',
+      'before INITIALIZER - null',
+      '	prev:     Stored at SETUP_SPEC - null',
+      '	replaced: null',
+      '	put:      Stored at INITIALIZER - null',
+      'after INITIALIZER - null',
+      'before FEATURE_EXECUTION - null',
+      '	prev:     Stored at INITIALIZER - null',
+      '	replaced: Stored at INITIALIZER - null',
+      '	put:      Stored at FEATURE_EXECUTION - null',
+      'before ITERATION_EXECUTION - null',
+      '	prev:     Stored at FEATURE_EXECUTION - null',
+      '	replaced: Stored at FEATURE_EXECUTION - null',
+      '	put:      Stored at ITERATION_EXECUTION - null',
+      'before SETUP - null',
+      '	prev:     Stored at ITERATION_EXECUTION - null',
+      '	replaced: Stored at ITERATION_EXECUTION - null',
+      '	put:      Stored at SETUP - null',
+      'after SETUP - null',
+      'before FEATURE - a feature',
+      '	prev:     Stored at SETUP - null',
+      '	replaced: Stored at SETUP - null',
+      '	put:      Stored at FEATURE - a feature',
+      'after FEATURE - a feature',
+      'before CLEANUP - null',
+      '	prev:     Stored at FEATURE - a feature',
+      '	replaced: Stored at FEATURE - a feature',
+      '	put:      Stored at CLEANUP - null',
+      'after CLEANUP - null',
+      '# closing Stored at CLEANUP - null',
+      '# closing Stored at FEATURE - a feature',
+      '# closing Stored at SETUP - null',
+      '# closing Stored at ITERATION_EXECUTION - null',
+      '# closing Stored at FEATURE_EXECUTION - null',
+      '# closing Stored at INITIALIZER - null',
+      'after ITERATION_EXECUTION - null',
+      'after FEATURE_EXECUTION - null',
+      'before FEATURE_EXECUTION - null',
+      '	prev:     Stored at SETUP_SPEC - null',
+      '	replaced: Stored at SETUP_SPEC - null',
+      '	put:      Stored at FEATURE_EXECUTION - null',
+      'before INITIALIZER - null',
+      '	prev:     Stored at FEATURE_EXECUTION - null',
+      '	replaced: null',
+      '	put:      Stored at INITIALIZER - null',
+      'after INITIALIZER - null',
+      'before ITERATION_EXECUTION - null',
+      '	prev:     Stored at INITIALIZER - null',
+      '	replaced: Stored at INITIALIZER - null',
+      '	put:      Stored at ITERATION_EXECUTION - null',
+      'before SETUP - null',
+      '	prev:     Stored at ITERATION_EXECUTION - null',
+      '	replaced: Stored at ITERATION_EXECUTION - null',
+      '	put:      Stored at SETUP - null',
+      'after SETUP - null',
+      'before FEATURE - data driven feature',
+      '	prev:     Stored at SETUP - null',
+      '	replaced: Stored at SETUP - null',
+      '	put:      Stored at FEATURE - data driven feature',
+      'after FEATURE - data driven feature',
+      'before CLEANUP - null',
+      '	prev:     Stored at FEATURE - data driven feature',
+      '	replaced: Stored at FEATURE - data driven feature',
+      '	put:      Stored at CLEANUP - null',
+      'after CLEANUP - null',
+      '# closing Stored at CLEANUP - null',
+      '# closing Stored at FEATURE - data driven feature',
+      '# closing Stored at SETUP - null',
+      '# closing Stored at ITERATION_EXECUTION - null',
+      '# closing Stored at INITIALIZER - null',
+      'after ITERATION_EXECUTION - null',
+      'before INITIALIZER - null',
+      '	prev:     Stored at FEATURE_EXECUTION - null',
+      '	replaced: null',
+      '	put:      Stored at INITIALIZER - null',
+      'after INITIALIZER - null',
+      'before ITERATION_EXECUTION - null',
+      '	prev:     Stored at INITIALIZER - null',
+      '	replaced: Stored at INITIALIZER - null',
+      '	put:      Stored at ITERATION_EXECUTION - null',
+      'before SETUP - null',
+      '	prev:     Stored at ITERATION_EXECUTION - null',
+      '	replaced: Stored at ITERATION_EXECUTION - null',
+      '	put:      Stored at SETUP - null',
+      'after SETUP - null',
+      'before FEATURE - data driven feature',
+      '	prev:     Stored at SETUP - null',
+      '	replaced: Stored at SETUP - null',
+      '	put:      Stored at FEATURE - data driven feature',
+      'after FEATURE - data driven feature',
+      'before CLEANUP - null',
+      '	prev:     Stored at FEATURE - data driven feature',
+      '	replaced: Stored at FEATURE - data driven feature',
+      '	put:      Stored at CLEANUP - null',
+      'after CLEANUP - null',
+      '# closing Stored at CLEANUP - null',
+      '# closing Stored at FEATURE - data driven feature',
+      '# closing Stored at SETUP - null',
+      '# closing Stored at ITERATION_EXECUTION - null',
+      '# closing Stored at INITIALIZER - null',
+      'after ITERATION_EXECUTION - null',
+      'after FEATURE_EXECUTION - null',
+      'before CLEANUP_SPEC - null',
+      '	prev:     Stored at FEATURE_EXECUTION - null',
+      '	replaced: Stored at FEATURE_EXECUTION - null',
+      '	put:      Stored at CLEANUP_SPEC - null',
+      'after CLEANUP_SPEC - null',
+      '# closing Stored at CLEANUP_SPEC - null',
+      '# closing Stored at FEATURE_EXECUTION - null',
+      '# closing Stored at SETUP_SPEC - null',
+      '# closing Stored at SPEC_EXECUTION - null',
+      '# closing Stored at SHARED_INITIALIZER - null',
+      'after SPEC_EXECUTION - null'
     ]
   }
 
