@@ -9,6 +9,9 @@ include::include.adoc[]
 
 * Calling `old(...)` with multiple arguments is now a compilation error. Previously the additional arguments were simply ignored.
 
+=== Misc
+* Add support for <<extensions.adoc#extension-store,keeping state in extensions>>
+
 == 2.4-M1 (2022-11-30)
 
 * Fix issues with Spring 6/Spring Boot 3 spockPull:1541[]
